<resources>
    <string name="app_name">Calculator</string>
    <string name="clear_text">C</string>
    <string name="plus_minus_text">+/-</string>
    <string name="percent_text">%</string>
    <string name="division_text">/</string>
    <string name="seven_text">7</string>
    <string name="eight_text">8</string>
    <string name="nine_text">9</string>
    <string name="multiply_text">*</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="six_text">6</string>
    <string name="subtract_text">-</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="add_text">+</string>
    <string name="zero_text">0</string>
    <string name="dot_text">.</string>
    <string name="del_text">del</string>
    <string name="equal_text">=</string>
    <string name="result_text">=</string>
    <string name="content_description_text">An Edit Text for Calculator</string>

</resources>